--- a/app/views/address_categories/_medium_risk_addresses.html.erb
+++ b/app/views/address_categories/_medium_risk_addresses.html.erb
@@ -43,7 +43,7 @@
     </div>
     <hr class="sm">
     <div>
-      <a href="https://www4.ti.ch/dss/dsp/osc/chi-siamo/servizi-medico-psicologici/"  target="_blank" ><i class="fas fa-link"></i> https://www4.ti.ch/dss/dsp/osc/chi-siamo/servizi-medico-psicologici/</a>
+      <a href="https://www4.ti.ch/dss/dsp/osc/chi-siamo/servizi-medico-psicologici"  target="_blank" ><i class="fas fa-link"></i> https://www4.ti.ch/dss/dsp/osc/chi-siamo/servizi-medico-psicologici</a>
     </div>
   </div>
 </div>
@@ -64,7 +64,7 @@
     </div>
     <hr class="sm">
     <div>
-      <a href="https://www4.ti.ch/decs/ds/sps/cosa-facciamo/servizio-delleducazione-precoce-speciale/"  target="_blank" ><i class="fas fa-link"></i> https://www4.ti.ch/decs/ds/sps/cosa-facciamo/servizio-delleducazione-precoce-speciale/</a>
+      <a href="https://www4.ti.ch/decs/ds/sps/cosa-facciamo/servizio-delleducazione-precoce-speciale/"  target="_blank" ><i class="fas fa-link"></i> https://www4.ti.ch/decs/ds/sps/cosa-facciamo/servizio-delleducazione-precoce-speciale</a>
     </div>
   </div>
 </div>
@@ -93,7 +93,7 @@
     </div>
     <hr class="sm">
     <div>
-      <a href="https://www.serviziosae.ch/"  target="_blank" ><i class="fas fa-link"></i> https://www.serviziosae.ch/</a>
+      <a href="https://www.serviziosae.ch"  target="_blank" ><i class="fas fa-link"></i> https://www.serviziosae.ch</a>
     </div>
   </div>
 </div>
