--- a/app/views/address_categories/standard_partials/_sort_order_3.html.erb
+++ b/app/views/address_categories/standard_partials/_sort_order_3.html.erb
@@ -3,9 +3,10 @@
     <h6 class="card-subtitle mb-2 text-muted">Consultorio genitori e bambino</h6>
     <div>
       <ul>
-        <li>Le <span class="bold">consulenti genitoriali</span> accompagnano le famiglie con bambini da 0 a 4 anni.</li>
-        <li>Possono dare informazioni riguardo l’allattamento, l’alimentazione, la cura del neonato e del bambino, lo sviluppo fisico e psicomotorio, l’educazione, così come i luoghi d’incontro nella vostra regione e tante altre tematiche relative ai primi anni di vita.</li>
-        <li>Le consultazioni sono gratuite per le famiglie, in quanto i costi sono assunti dai comuni e dal cantone.</li>
+        <li>Le famiglie con bambini da 0 a 4 anni possono rivolgersi al Consultorio Genitori e Bambino per ottenere informazioni riguardo l’allattamento, l’alimentazione, la cura del neonato e del bambino, lo sviluppo fisico e psicomotorio, l’educazione, e tante altre tematiche relative ai primi anni di vita, così come relativamente ai luoghi d’incontro della loro regione.</li>
+        <li>Possono contattare il Consultorio telefonicamente o via mail.</li>
+        <li>Le sue consulenti accoglieranno i genitori/nonni con i bambini negli ambulatori presenti sul territorio oppure li visiteranno a domicilio.</li>
+        <li>Le consultazioni sono gratuite, in quanto i costi sono assunti dai comuni e dal cantone.</li>
       </ul>
       <p>Le sedi si trovano presso i Servizi di Assistenza e Cura a Domicilio (SACD) delle diverse regioni:</p>
     </div>
