style for all devices

--- a/app/views/address_categories/standard_partials/_sort_order_4.html.erb
+++ b/app/views/address_categories/standard_partials/_sort_order_4.html.erb
@@ -14,7 +14,7 @@
     </div>
     <hr class="sm">
     <div>
-      <p class="card-text">Incontri PEM vengono proposti sul resto del Cantone dei Consultori Genitori e Bambino sul territorio (vedi CONSULTORI)</p>
+      <p class="card-text">Incontri PEM vengono proposti sul resto del Cantone dei Consultori Genitori e Bambino sul territorio <%= link_to "(vedi CONSULTORI)", address_category_path(@consultori_id), class:"inline" %>.</p>
     </div>
   </div>
 </div>
