--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,8 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <meta name="description" content="PAT Parents as Teachers questionnaire">
-    <meta name="author" content="Tococorocko - Lucca Kaiser">
-    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;600&display=swap" rel="stylesheet">
+    <meta name="author" content="PAT Ticino">
+    <link href="https://fonts.googleapis.com/css2?family=Kameron:wght@400;700&family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <!-- Global site tag (gtag.js) - Google Analytics -->
