--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -23,8 +23,7 @@
           </div>
         </div>
       <% end %>
-      <hr>
-      <h3>Fattori protettivi</h3>
+      <h3 class="subtitle">Fattori protettivi</h3>
       <% @positive_factors.each do |category| %>
         <div class="card">
           <div class="card-body">
