--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -8,22 +8,18 @@
     <h3>Chi siamo</h3>
     <p>Parent as Teachers promuove lo sviluppo precoce, l’apprendimento e la salute dei bambini nella prima infanzia sostenendo coinvolgendo i genitori e le persone di riferimento</p>
     <p>I genitori influenzano in maniera importante lo sviluppo e l’apprendimento del proprio bambino. Con l’aiuto del progetto PAT – Imparo con i genitori vi viene offerta l’opportunità di ricevere informazioni e il sostegno necessari per svolgere al meglio il vostro compito.</p>
-    <hr>
-    <h3>A chi si rivolge il progetto</h3>
+    <h3 class="subtitle">A chi si rivolge il progetto</h3>
     <p>Si rivolge a donne in gravidanza e famiglie con bambini tra 0 e 6 mesi al momento della segnalazione, con molteplici oneri personali , familiari, sociali o materiali.</p>
     <p>L’obiettivo è quello di fornire un sostegno precoce alle famiglie con condizioni di partenza difficili.</p>
-    <hr>
-    <h3>Come funziona il PAT</h3>
+    <h3 class="subtitle">Come funziona il PAT</h3>
     <p>La visita con la consulente PAT di solito avviene ogni 2 settimane ed ha una durata complessiva di circa un’ora, a casa delle famiglie, fino quando il bambino avrà 2 o 3 anni. Inoltre c’è la possibilità di partecipare a degli incontri di gruppo.</p>
-    <p class="bold">Ulteriori informazioni si trova sul sito: <%= link_to "www.pat-ti.ch", "https://www.pat-ti.ch", target: "_blank" %>
+    <p class="bold">Ulteriori informazioni si trova sul sito: <%= link_to "https://www.pat-ti.ch", "https://www.pat-ti.ch", target: "_blank" %>
     </p>
-    <hr>
-    <h3>Come si può partecipare al progetto</h3>
+    <h3 class="subtitle">Come si può partecipare al progetto</h3>
     <p>Tutti possono annunciare, tramite telefono <%= link_to "+41 79 375 37 91", "tel:0041793753791", target: "_blank" %> o scrivendo a <%= link_to "info@pat-ti.ch", "mailto:info@pat-ti.ch", target: "_blank" %>, le famiglie stesse, pediatri, ginecologici, levatrici….</p>
     <p>È importante che la famiglia sia d’accordo di essere chiamata. Una consulente PAT prenderà contatto con la famiglia, andrà a domicilio a spiegare il progetto. Come famiglia si ha la possibilità di fare delle visite di prova, prima di decidere se partecipare al progetto.</p>
     <p class="bold">Il progetto è volontario e gratuito per le famiglie.</p>
-    <hr>
-    <h3>Cosa dicono le famiglie di noi</h3>
+    <h3 class="subtitle">Cosa dicono le famiglie di noi</h3>
     <p class="citation">"Grazie alla mia consulente ho capito tanto di mio figlio, ma soprattutto ho conosciuto molto meglio me stessa…"</p>
     <p class="citation">"Senza il suo aiuto e supporto avrei punito mio figlio quando non obbediva, non sapevo come gestirlo…"</p>
     <p class="citation">"Mi ha dato tante idee di gioco, con oggetti di casa, che avrei buttato…"</p>
@@ -46,7 +42,7 @@
             <i class="fas fa-envelope"></i>info@pat-ti.ch
           <% end %>
           <%= link_to "https://www.pat-ti.ch", target: "_blank" do %>
-            <i class="fas fa-link"></i>www.pat-ti.ch
+            <i class="fas fa-link"></i>https://www.pat-ti.ch
           <% end %>
         </div>
       </div>
