--- a/app/javascript/stylesheets/main.scss
+++ b/app/javascript/stylesheets/main.scss
@@ -6,6 +6,7 @@
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
+  font-family: 'Roboto Condensed', sans-serif;
 }
 
 article, aside, details, figcaption, figure,
@@ -27,6 +28,9 @@ ul {
   list-style: disc;
   margin: 0 0 2rem 0;
   padding-left: 1em;
+  li {
+    margin-bottom: 0.5rem;
+  }
 }
 
 input::-moz-focus-inner {
@@ -73,7 +77,13 @@ body.preload *, body.preload *:before, body.preload *:after {
 
 @media screen and (max-width: 736px) {
   html {
-    font-size: 12px;
+    font-size: 15px;
+  }
+  h1 {
+    font-size: 28px;
+  }
+  h2 {
+    font-size: 20px;
   }
 }
 
@@ -85,10 +95,10 @@ body.preload *, body.preload *:before, body.preload *:after {
 
 body, input, select, textarea {
   color: #0066a4;
-  font-family: 'Rubik', sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
   font-weight: 400;
   font-size: 1rem;
-  line-height: 1.65;
+  line-height: 1.4;
 }
 
 a {
@@ -118,8 +128,9 @@ em, i {
 }
 
 p {
-  letter-spacing: 0.6px;
-  margin: 0 0 2rem 0;
+  font-size: 15px;
+  letter-spacing: 0.3px;
+  margin: 0 0 1rem 0;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -128,6 +139,9 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 1.5;
   margin: 0 0 1rem 0;
   letter-spacing: 0.2rem;
+  &.subtitle {
+    padding-top: 1rem;
+  }
 }
 
 h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
@@ -136,20 +150,22 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 }
 
 h1 {
+  font-family: 'Kameron', serif;
   text-transform: uppercase;
-  font-size: 2rem;
-  line-height: 1.3;
-  letter-spacing: 0.5rem;
+  font-size: 28px;
+  line-height: 1.4;
+  letter-spacing: 1px;
   &.major {
-    font-size: 2.25rem;
+    font-size: 28px;
   }
 }
 
 h2 {
-  font-size: 1.6rem;
+  font-size: 24px;
   line-height: 1.4;
-  letter-spacing: 0.5rem;
+  letter-spacing: 1px;
   &.major {
+    font-family: 'Kameron', serif;
     color: #b7c221;
     border-bottom: solid 1px #b7c221;
     padding-bottom: 0.5rem;
@@ -158,10 +174,10 @@ h2 {
 }
 
 h3, h4 {
-  text-transform: uppercase;
-  font-size: 1rem;
+  font-size: 24px;
 }
 h4 {
+  font-size: 20px;
   margin-top: 0px;
   margin-bottom: 0;
 }
@@ -169,6 +185,12 @@ h4 {
 h3.risk-link {
   text-decoration: underline dotted;
   color: #b7c221;
+  font-size: 18px;
+}
+
+h6 {
+  font-size: 15px;
+  padding-top: 0;
 }
 
 button, [type="button"], [type="reset"], [type="submit"] {
@@ -176,23 +198,6 @@ button, [type="button"], [type="reset"], [type="submit"] {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-}
-
-@media screen and (max-width: 980px) {
-  h1.major {
-    font-size: 1.5rem;
-    line-height: 1.4;
-  }
-  h2 {
-    font-size: 1.4rem;
-    line-height: 1.5;
-  }
-  h3 {
-    font-size: 1.3rem;
-  }
-  p {
-    font-size: 1.2rem;
-  }
 }
 
 /* Wrapper */
@@ -323,7 +328,7 @@ button, [type="button"], [type="reset"], [type="submit"] {
   .subtext {
     text-transform: none;
     color: #04968D;
-    font-size: 1.2rem;
+    font-size: 1rem;
   }
 }
 
@@ -412,7 +417,7 @@ button, [type="button"], [type="reset"], [type="submit"] {
 
 @media screen and (max-width: 736px) {
   #menu  #controls .control-link a {
-    font-size: 1.2rem;
+    font-size: 1rem;
   }
 }
 
@@ -514,6 +519,7 @@ body.preload #menu .content .inner {
 }
 
 #menu .inner h2 {
+  font-weight: 400;
   color: #04968D;
 }
 
@@ -534,6 +540,7 @@ body.preload #menu .content .inner {
     color: #b7c221;
   }
   .bold {
+    padding: 15px;
     font-weight: bold;
   }
   h2 {
@@ -577,27 +584,28 @@ body.preload #menu .content .inner {
       display: inline-block;
       margin-bottom: 0;
       font-size: 1.1rem;
+      margin-left: 5px;
     }
   }
   .btn {
-    background-color: #b7c221;
-    font-weight: 700;
+    font-weight: 400;
+    font-size: 1.2rem;
     text-transform: uppercase;
-    letter-spacing: 0.2rem;
+    letter-spacing: 0.1rem;
     cursor: pointer;
-    padding: 5px 15px;
-    margin-top: 40px;
+    padding: 10px 25px;
+    margin-top: 30px;
     margin-bottom: 15px;
     transition: all 0.5s ease 0s;
     color: #5a6268;
-    text-transform: uppercase;
-    letter-spacing: 0.1rem;
     text-decoration: none;
+    border: 1px solid #b7c221;
+    border-radius: 0;
     &:hover {
-      background-color: #E9EEBD;
+      background-color: #b7c221;
       cursor: pointer;
       text-decoration: none;
-      color: #b7c221;
+      color: #04968D;
     }
   }
 }
@@ -687,7 +695,10 @@ a.button {
 
 #main #about {
   .citation {
+    color: #5a6268;
+    letter-spacing: 0;
     font-style: italic;
+    margin-bottom: 1.4rem;
   }
 }
 
@@ -699,8 +710,16 @@ a.button {
   padding: 4rem 4rem;
   width: 4rem;
   height: 4rem;
-
   .dropdown-item {
+    color: #5a6268;
+    text-transform: uppercase;
+    letter-spacing: 0.1rem;
+    &.active, &:active, &:hover {
+      background-color: #b7c221;
+      cursor: pointer;
+      text-decoration: none;
+      color: #04968D;
+    }
   }
 }
 
