add cookie consent banner for Google Analytics

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <meta name="description" content="PAT Parents as Teachers questionnaire">
-    <meta name="author" content="PAT Ticino">
+    <meta name="author" content="PAT - Parents as Teachers - Imparo Con I Genitori Ticino">
     <link href="https://fonts.googleapis.com/css2?family=Kameron:wght@400;700&family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -25,9 +25,15 @@
   </head>
 
   <body class="preload">
+    <div id="cookies-eu-banner" style="display: none;">
+        <%= t("cookies.description") %>
+        <button id="cookies-eu-reject"><%= t("cookies.reject") %></button>
+        <button id="cookies-eu-accept"><%= t("cookies.accept") %></button>
+    </div>
     <div id="wrapper">
       <%= yield %>
       <%= render 'layouts/footer' %>
     </div>
+
   </body>
 </html>
