--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -6,7 +6,7 @@
   </div>
    <div id="screening">
     <h2 class="major">Screening</h2>
-    <h3>Fattor di stress per il bambino/a e la sua famiglia</h3>
+    <h3>Fattori di stress per il bambino/a e la sua famiglia</h3>
     <%= form_with url: address_categories_path, local: true do %>
       <% @negative_factors.each do |category| %>
         <div class="card">
