--- a/app/views/address_categories/index.html.erb
+++ b/app/views/address_categories/index.html.erb
@@ -7,25 +7,32 @@
   <div class="content">
     <div class="inner">
       <h1><%= t("addresses.contatti") %></h1>
-      <p class="subtext">Tutte le famiglie con bambini piccoli e mamme durante la gravidanza hanno la possibilità di accedere a questi servizi per trovare risposte alle loro domande e ricevere informazioni e sostegno.</p>
-    </div>
-  </div>
-  <div id="controls" class="nav">
-    <% @address_categories.each do |category| %>
-      <div class="control-link">
-        <%= link_to category.name, address_category_path(category_id: category.id) %>
+
+      <div class="address-card">
+        <h2>Levatrici</h2>
+        <div>
+          <a href="http://levatrici-ti.ch/"  target="_blank" ><i class="fas fa-link"></i>http://levatrici-ti.ch/</a>
+        </div>
       </div>
-    <% end %>
+
+      <div class="address-card">
+        <h2>Forum Genitorialità</h2>
+        <div>
+          <p>È un progetto che raggruppa enti e associazioni della Svizzera italiana che offrono un sostegno mirato alle esigenze delle famiglie e delle future famiglie.</p>
+        </div>
+        <div>
+          <a href="https://www.genitorialita.ch/it/"  target="_blank" ><i class="fas fa-link"></i>https://www.genitorialita.ch/</a>
+        </div>
+      </div>
+    </div>
   </div>
 
-  <div class="content extended">
-    <div class="inner">
-      <%= link_to medium_risk_path do %>
-        <h3 class="risk-link"><%= t("addresses.medium_risk") %>?</h3>
-      <% end %>
-      <%= link_to high_risk_path do %>
-        <h3 class="risk-link"><%= t("addresses.high_risk") %>?</h3>
-      <% end %>
-    </div>
+  <div id="controls" class="nav">
+      <div class="control-link">
+        <%= link_to t("addresses.medium_risk"), medium_risk_path %>
+      </div>
+      <div class="control-link">
+        <%= link_to t("addresses.high_risk"), high_risk_path %>
+      </div>
   </div>
 </div>
