change medium description

--- a/app/views/address_categories/medium_risk.html.erb
+++ b/app/views/address_categories/medium_risk.html.erb
@@ -8,7 +8,7 @@
     <h2 class="major"><%= t("addresses.medium_risk") %></h2>
     <p>Secondo lo screening, questa famiglia può usufruire come tutte le famiglie dei sostegni della prevenzione primaria, ma è auspicabile ampliare la presa a carico con altri servizi di sostegno e aiuto.
     </p>
-    <p>L’attivazione del progetto PAT, prevede una visita domiciliare per conoscere la famiglia e presentare il progetto. È  possibile effettuare un paio di visite di prova così che la famiglia possa capire di cosa si tratta. Insieme si valuterà e deciderà se proseguire con il progetto PAT oppure coinvolgere altri servizi.</p>
+    <p>L’attivazione del progetto PAT, prevede una visita domiciliare per conoscere la famiglia e presentare il progetto. Dopo di che, se la famiglia è interessata, si svolgeranno almeno un paio di visite di ammissione cosicché la famiglia possa capire di cosa si tratta. Insieme si valuterà e deciderà se proseguire con il progetto PAT oppure coinvolgere altri servizi.</p>
     <p>Da parte del PAT ci sarà sempre un feedback a chi ha segnalato la famiglia.</p>
 
     <%= render 'address_categories/medium_risk_addresses' %>
