--- a/app/views/address_categories/index.html.erb
+++ b/app/views/address_categories/index.html.erb
@@ -7,16 +7,17 @@
   <div class="content">
     <div class="inner">
       <h1><%= t("addresses.contatti") %></h1>
-
+      <h2><%= t("addresses.subtitle_1") %></h2>
+      <h2><%= t("addresses.subtitle_2") %></h2>
       <div class="address-card">
-        <h2>Levatrici</h2>
+        <h2 class="uppercase">Levatrici</h2>
         <div>
           <a href="http://levatrici-ti.ch/"  target="_blank" ><i class="fas fa-link"></i>http://levatrici-ti.ch/</a>
         </div>
       </div>
 
       <div class="address-card">
-        <h2>Forum Genitorialità</h2>
+        <h2 class="uppercase">Forum Genitorialità</h2>
         <div>
           <p>È un progetto che raggruppa enti e associazioni della Svizzera italiana che offrono un sostegno mirato alle esigenze delle famiglie e delle future famiglie.</p>
         </div>
