--- a/app/views/address_categories/medium_risk.html.erb
+++ b/app/views/address_categories/medium_risk.html.erb
@@ -6,11 +6,11 @@
   </div>
   <div id="addresses">
     <h2 class="major"><%= t("addresses.medium_risk") %></h2>
-    <p>Secondo lo screening, questa famiglia può usufruire come tutte le famiglie dei sostegni della prevenzione primaria, ma è auspicabile ampliare la presa a carico con altri servizi di sostegno e aiuto.
-    </p>
-    <p>L’attivazione del progetto PAT, prevede una visita domiciliare per conoscere la famiglia e presentare il progetto. Dopo di che, se la famiglia è interessata, si svolgeranno almeno un paio di visite di ammissione cosicché la famiglia possa capire di cosa si tratta. Insieme si valuterà e deciderà se proseguire con il progetto PAT oppure coinvolgere altri servizi.</p>
-    <p>Da parte del PAT ci sarà sempre un feedback a chi ha segnalato la famiglia.</p>
-
+    <p>Secondo il punteggio dello screening fatto per questa famiglia si consiglia la prevenzione secondaria oltre a quella primaria <%= link_to "(vedi tutti contatti)", address_categories_path%>.</p>
+    <p>Il progetto PAT può intervenire in questi casi.</p>
+    <p>Voi come professionisti, che conoscete la famiglia, potete consigliarlo e chiedere ai genitori il permesso di essere contattati dal coordinatore del progetto per una presentazione a domicilio.</p>
+    <p>Se la famiglia è interessata, si svolgeranno almeno un paio di visite di ammissione cosicché la famiglia possa capire di cosa si tratta. Insieme si deciderà se proseguire con il progetto PAT oppure coinvolgere altri servizi.</p>
+    <p>Sarà nostra premura dare un feedback a chi ha segnalato la famiglia.</p>
     <%= render 'address_categories/medium_risk_addresses' %>
 
   </div>
