--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,7 +4,7 @@
   <div class="content">
     <div class="inner">
       <h1 class="major"><%= t("home.title") %></h1>
-      <h2><%= t("home.subtitle") %></h2>
+      <h2 class="uppercase"><%= t("home.subtitle") %></h2>
     </div>
   </div>
   <div id="controls" class="nav">
