fix typos according to emails

--- a/app/views/address_categories/high_risk.html.erb
+++ b/app/views/address_categories/high_risk.html.erb
@@ -9,9 +9,10 @@
     <p>Secondo il punteggio dello screening fatto per questa famiglia si consiglia la prevenzione terziaria oltre a quella primaria   <%= link_to "(vedi tutti contatti)", address_categories_path %>.</p>
     <p>I fattori di stress sono numerosi, uno sviluppo sano del loro bambino potrebbe essere compromesso.</p>
     <p>Il progetto PAT può intervenire in questi casi, assieme a una rete presente o creata intorno alla famiglia.</p>
-    <p>Voi come professionisti, che conoscete la famiglia, potete consigliarla e chiedere ai genitori il permesso di essere contattati del progetto per una presentazione a domicilio.</p>
-    <p>Se la famiglia è interessata, si svolgeranno almeno un paio di visite di ammissione cosicché la famiglia possa capire di cosa si tratta. Insieme si deciderà se proseguire con il progetto PAT e quali altri servizi possono essere di sostegno.</p>
-    <p>Sarà nostra premura dare un feedback a chi ha segnalato la famiglia.</p>
+    <p>Voi come professionisti, che conoscete la famiglia, potete consigliarlo e chiedere ai genitori il permesso di essere contattati dal coordinatore del progetto per una presentazione a domicilio.
+    </p>
+    <p>Se la famiglia è interessata, si svolgeranno almeno un paio di visite di ammissione cosicché la famiglia possa capire di cosa si tratta. Insieme si deciderà se proseguire con il progetto PAT oppure coinvolgere altri servizi.
+    </p>
 
     <%= render 'address_categories/medium_risk_addresses' %>
 
