adjust primary address

--- a/app/views/address_categories/index.html.erb
+++ b/app/views/address_categories/index.html.erb
@@ -11,19 +11,12 @@
       <h2><%= t("addresses.subtitle_2") %></h2>
 
       <div class="address-card">
-        <h2 class="uppercase">Forum Genitorialità</h2>
+        <h2 class="uppercase"><a href="https://ticinoperbambini.ch/Sportello-famiglie" target="_blank">Ticinoperbambini.ch</a></h2>
         <div>
-          <p>È un progetto che raggruppa enti e associazioni della Svizzera italiana che offrono un sostegno mirato alle esigenze delle famiglie e delle future famiglie.</p>
+          <p>È una guida per le offerte ed attività in Ticino per famiglie e bambini, compreso sportello-famiglie.</p>
         </div>
         <div>
-          <a href="https://www.genitorialita.ch/it/"  target="_blank" ><i class="fas fa-link"></i>https://www.genitorialita.ch/</a>
-        </div>
-      </div>
-
-      <div class="address-card">
-        <h2 class="uppercase">Levatrici</h2>
-        <div>
-          <a href="http://levatrici-ti.ch/"  target="_blank" ><i class="fas fa-link"></i>http://levatrici-ti.ch/</a>
+          <a href="https://ticinoperbambini.ch/Sportello-famiglie"  target="_blank"><i class="fas fa-link"></i>https://ticinoperbambini.ch/Sportello-famiglie</a>
         </div>
       </div>
 
