--- a/app/javascript/stylesheets/main.scss
+++ b/app/javascript/stylesheets/main.scss
@@ -53,7 +53,7 @@ html {
 }
 
 body {
-  background: linear-gradient(rgba(0, 0, 0, 0.03), #E9EEBD 30vh);
+  background: #E9EEBD;
   line-height: 1;
 }
 
