change address according to email 29.07.2021, update gems and node_modules

--- a/app/views/address_categories/high_risk.html.erb
+++ b/app/views/address_categories/high_risk.html.erb
@@ -18,7 +18,7 @@
 
     <div class="card">
       <div class="card-body">
-        <h6 class="card-subtitle mb-2 text-muted">UAP - Ufficio delle famiglie e dei minorenni</h6>
+        <h6 class="card-subtitle mb-2 text-muted">UAP - Settore famiglie e minorenni</h6>
         <div>
           <p class="card-text">6500 Bellinzona</p>
           <a href="tel:+41 91 814 75 11"><i class="fas fa-phone-alt"></i>+41 91 814 75 11</a>
@@ -32,7 +32,7 @@
         </div>
         <hr class="sm">
         <div>
-          <p class="card-text">6900 Lugano</p>
+          <p class="card-text">6900 Paradiso</p>
           <a href="tel:+41 91 815 75 31"><i class="fas fa-phone-alt"></i>+41 91 815 75 31</a>
           <a href="mailto:dss-minorenni.lugano@ti.ch"><i class="fas fa-envelope"></i>dss-minorenni.lugano@ti.ch</a>
         </div>
