--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,11 +16,8 @@
     <meta name="description" content="PAT Parents as Teachers questionnaire">
     <meta name="author" content="PAT - Parents as Teachers - Imparo Con I Genitori Ticino">
     <link href="https://fonts.googleapis.com/css2?family=Kameron:wght@400;700&family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-
+    <%= stylesheet_link_tag 'site', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
 
   </head>
 
