--- a/app/assets/stylesheets/fonts.scss
+++ b/app/assets/stylesheets/fonts.scss
@@ -1,11 +1,48 @@
 @font-face {
-    font-family:"Kameron";
-    src: url("../fonts/Kameron-Regular.ttf") format("opentype");
-    font-weight: medium;
-  }
+  font-family:"Kameron";
+  src: url("../fonts/Kameron-Regular.ttf") format("truetype");
+  font-weight: normal;
+}
 
-  @font-face {
-    font-family: 'Roboto Condensed';
-    src: url('../fonts/RobotoCondensed-Regular.ttf') format("opentype");
-    font-weight: medium;
-  }
+@font-face {
+  font-family:"Kameron";
+  src: url("../fonts/Kameron-Bold.ttf") format("truetype");
+  font-weight: bold;
+}
+
+@font-face {
+  font-family: 'Roboto Condensed';
+  src: url('../fonts/RobotoCondensed-Regular.ttf') format("truetype");
+  font-weight: normal;
+  font-stretch: condensed;
+}
+
+@font-face {
+  font-family: 'Roboto Condensed';
+  src: url('../fonts/RobotoCondensed-Bold.ttf') format("truetype");
+  font-weight: bold;
+  font-stretch: condensed;
+}
+
+@font-face {
+  font-family: 'Roboto Condensed';
+  src: url('../fonts/RobotoCondensed-BoldItalic.ttf') format("truetype");
+  font-weight: bold;
+  font-style: italic;
+  font-stretch: condensed;
+}
+
+@font-face {
+  font-family: 'Roboto Condensed';
+  src: url('../fonts/RobotoCondensed-Light.ttf') format("truetype");
+  font-weight: 300;
+  font-stretch: condensed;
+}
+
+@font-face {
+  font-family: 'Roboto Condensed';
+  src: url('../fonts/RobotoCondensed-LightItalic.ttf') format("truetype");
+  font-weight: 300;
+  font-style: italic;
+  font-stretch: condensed;
+}
